<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/text_home" />
        <item
            android:id="@+id/nav_local"
            android:icon="@drawable/local"
            android:title="@string/text_local_music" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_playlist"
            android:title="@string/text_play_lists" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_recent"
            android:title="@string/text_recently_play" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_heart_filled"
            android:title="@string/text_favourites" />
        <item
            android:id="@+id/nav_folder"
            android:icon="@drawable/folder"
            android:title="Folders"
            android:visible="false"
            />
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_save_filled"
            android:title="Saved DNA"
            android:visible="false"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="Settings"
            android:visible="false"
            />
        <item
            android:id="@+id/nav_about"
            android:title="@string/text_about"
            android:visible="false"
            />
    </group>

</menu>
