<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_bill_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/newListRecyclerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recentsRecyclerContainer"
        android:layout_marginLeft="-6dp"
        android:layout_marginRight="-6dp"
        android:layout_marginTop="3dp">


        <TextView
            android:id="@+id/newListRecyclerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:text="@string/text_new_song"
            android:textColor="#fdffff"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/newListNothingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newListRecyclerLabel"
            android:layout_centerInParent="true"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:drawableTop="@drawable/icon_refresh"
            android:text="@string/text_refresh"
            android:textColor="#888"
            android:textSize="13sp"
            android:visibility="visible"/>

        <ProgressBar
            android:id="@+id/new_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newListRecyclerLabel"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/newLists_view_all"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/newListRecyclerLabel"
            android:layout_alignParentRight="true"
            android:paddingRight="15dp"
            android:text="@string/text_all"
            android:textColor="#FF5778A6"
            android:textSize="12sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/new_list_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newListRecyclerLabel"
            android:padding="5dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/billListRecyclerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recentsRecyclerContainer"
        android:layout_marginLeft="-6dp"
        android:layout_marginRight="-6dp"
        android:layout_marginTop="0dp">


        <TextView
            android:id="@+id/billListRecyclerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:text="@string/text_hot_song"
            android:textColor="#fdffff"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/billListNothingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/billListRecyclerLabel"
            android:layout_centerInParent="true"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:drawableTop="@drawable/icon_refresh"
            android:text="@string/text_refresh"
            android:textColor="#888"
            android:textSize="13sp"
            android:visibility="visible"/>

        <ProgressBar
            android:id="@+id/bill_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/billListRecyclerLabel"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/billLists_view_all"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/billListRecyclerLabel"
            android:layout_alignParentRight="true"
            android:paddingRight="15dp"
            android:text="@string/text_all"
            android:textColor="#FF5778A6"
            android:textSize="12sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/bill_list_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/billListRecyclerLabel"
            android:padding="5dp"/>
    </RelativeLayout>
</LinearLayout>